<resources>
    <string name="app_name">Skiptti</string>
    <string name="text_button_send">Send</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>
    <string name="text_label_submit">&#xf125;</string>
    <string name="text_fithooks">Fithooks</string>
    <string name="text_welcome">Welcome back</string>
    <string name="text_welcome_instruction">A beautiful spot to continue</string>
    <string name="text_pre_login_message">&lt;big>&lt;b> Skiptti &lt;/b>&lt;/big></string>
    <!--<string name="text_pre_login_message">&lt;big>&lt;b> Skiptti &lt;/b>&lt;/big> &lt;p>enjoy the experience</string>-->
    <string name="text_create_me">Create me</string>
    <string name="description_create_user">Image create user</string>
    <string name="text_allow_me">Allow me</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="text_endurance_description">Hey!, Don\'t give it up, push yourself beyond the limits. Succeed each skipping challenge to get more endurance points. Good luck!</string>
    <string name="text_trainer_description">Wow you want to boost your skipping skills, get videos from trainers and skip along side with them. go on and top up your skill</string>
    <string name="text_challenge_single_description">Challenge your friends online to show them the stuff you\'ve got, would\'t you try?</string>
    <string name="text_jump_count">Skips</string>
    <string name="text_sample_count">9800</string>
    <string name="text_target_sample_value">750</string>
    <string name="text_sample_calorie">11.4</string>
    <string name="text_rpm_sample">68</string>
    <string name="text_rpm_sample_unit">rpm</string>
    <string name="text_button_ok">OK</string>
    <string name="text_set_target_dialog">Set target</string>
    <string name="text_set_target_title">Set target</string>
    <string name="text_set_target_sub_title">Set your target</string>
    <string name="text_hooks_devices">Devices</string>
    <string name="text_mac">MAC address</string>
    <string name="ble_not_supported">Ble is not supported</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_continue">Continue</string>
    <string name="button_play">Start</string>
    <string name="text_button_back">Back</string>
    <string name="text_kpi_skips">Skips</string>
    <string name="text_mock_skips">456</string>
    <string name="text_kpi_calorie">KCal</string>
    <string name="text_sample_date">29 june, 5days ago</string>
    <string name="last_skip_date">June 29, 2017</string>
    <string name="text_activity">Activity</string>
    <string name="text_target_type">Target</string>
    <string name="text_time_line">Today</string>
    <string name="text_start_skip">Take Jumps</string>
    <string name="text_kpi_max_skips">Max skips</string>
    <string name="text_date_time">Feb 5 2018</string>
    <string name="text_button_share">Share</string>
    <string name="text_set_finish_title">Nice Try!</string>
</resources>
