<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sub_title"
            fontPath="fonts/Roboto-Thin.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/text_set_target_sub_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="MissingPrefix" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.skiptti.app.control.ScrollSelectorView
                android:id="@+id/target_selector"
                fontPath="fonts/Roboto-Thin.ttf"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/fithooks_green_ring" />

        </FrameLayout>


        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle_black_border"
            android:text="@string/text_button_continue"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/text_button_back"
            android:textColor="@color/fithooks_light_gray" />
    </LinearLayout>
</RelativeLayout>